Fixed a few spacing issues

--- a/cc/apps/landing/static/less/all.less
+++ b/cc/apps/landing/static/less/all.less
@@ -62,7 +62,7 @@ hr { border-color: @gray; }
 			color: @gray-light;
 			padding: 1em;
 			font-size: 80%;
-			margin-bottom: 1em;
+			margin: 1em 0;
 
 			h3 { margin-bottom: 0.5em; }
 		}
@@ -186,3 +186,7 @@ footer {
 .challenge-rules {
 	li { margin-bottom: 1em; }
 }
+
+.margin-top { margin-top: 1em; }
+
+.messages { .margin-top; }
